Migrate custom styles to Tailwind and add config
Refactored globals.css to use Tailwind layers and utility classes, replacing custom CSS variables and styles with Tailwind equivalents. Updated all components to use Tailwind's accent-green color and related classes. Added autoprefixer and Tailwind dependencies, configured postcss, and introduced tailwind.config.js with custom theme extensions.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.4.6",
+    "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.12",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.539.0",
