--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,6 @@ yarn-error.log*
 next-env.d.ts
 
 # images
-EagleScoutProject.png
-FrontalPhotoOfMe.png
-SwedenNaturePhoto.png
+#EagleScoutProject.png
+#FrontalPhotoOfMe.png
+#SwedenNaturePhoto.png
